; ModuleID = '/home/carl/AnghaBench/lab/python/extr_dmlab_module.c_initdeepmind_lab.c'
source_filename = "/home/carl/AnghaBench/lab/python/extr_dmlab_module.c_initdeepmind_lab.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [13 x i8] c"deepmind_lab\00", align 1
@module_methods = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [24 x i8] c"DeepMind Lab API module\00", align 1
@singleton_mod_state = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @initdeepmind_lab() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  %3 = load i32, i32* @module_methods, align 4
  %4 = call i32* @Py_InitModule3(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32 %3, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.1, i64 0, i64 0))
  store i32* %4, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %13

7:                                                ; preds = %0
  %8 = load i32*, i32** %2, align 8
  %9 = call i64 @load_module_impl(i32* %8, i32* @singleton_mod_state)
  %10 = icmp eq i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %7
  %12 = call i32 (...) @import_array()
  br label %13

13:                                               ; preds = %11, %7, %0
  %14 = load i32, i32* %1, align 4
  ret i32 %14
}

declare dso_local i32* @Py_InitModule3(i8*, i32, i8*) #1

declare dso_local i64 @load_module_impl(i32*, i32*) #1

declare dso_local i32 @import_array(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
